--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="password" id="password" name="password" required="true"/>
             </div>
             <div class="elemento" style="text-align: center;">
-                <a href="/bienvenido.html" target="_blank">Enviar</a>
+                <a href="bienvenido.html" target="_blank">Enviar</a>
             </div>
                 
         </form>
